Use Class.getDeclaredConstructor().newInstance()